--- a/.github/workflow/preview.yml
+++ b/.github/workflow/preview.yml
@@ -2,12 +2,13 @@ name: Vercel Preview Deployment
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
 
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
+    environment: PROD
     steps:
       - uses: actions/checkout@v3
 
@@ -17,7 +18,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node
 
       - name: Install Dependencies
         run: npm install
