--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,19 +18,19 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-node
 
-      - name: Install Dependencies
+      - name: Install Node.js Dependencies
         run: npm install
 
-      - name: Install Vercel CLI
+      - name: Install Vercel CLI Globally
         run: npm install --global vercel
 
-      - name: Pull Vercel Environment Information
+      - name: Sync Environment Config from Vercel
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Build Project Artifacts
+      - name: Build Project Using Vercel
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Deploy Project Artifacts
+      - name: Deploy Prebuilt Project to Production
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
