--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,7 +2,7 @@ name: Vercel Preview Deployment
 
 on:
   push:
-    branches-ignore:
+    branches:
       - main
 
 jobs:
@@ -20,17 +20,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node
 
-      - name: Install Dependencies
+      - name: Install Node.js Dependencies
         run: npm install
 
-      - name: Install Vercel CLI
+      - name: Install Vercel CLI Globally
         run: npm install --global vercel
 
-      - name: Pull Vercel Environment Information
+      - name: Sync Environment Config from Vercel
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Build Project Artifacts
+      - name: Build Project Using Vercel
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
-      - name: Deploy Project Artifacts
+      - name: Deploy Prebuilt Project to Production
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
