--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: PROD
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Cache Node Modules
         uses: actions/cache@v2
@@ -19,7 +20,7 @@ jobs:
             ${{ runner.os }}-node
 
       - name: Install Node.js Dependencies
-        run: npm install
+        run: npm ci
 
       - name: Install Vercel CLI Globally
         run: npm install --global vercel
