feat(deployment): update GitHub workflows

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,8 +1,8 @@
-name: Vercel Preview Deployment
+name: Deployment Preview
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
 
 jobs:
