chore: update deployment

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install Node.js Dependencies
         run: npm ci
 
+      - name: Run Tests
+        run: npm test
+
       - name: Install Vercel CLI Globally
         run: npm install --global vercel
 
