--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "plugins": ["prettier"],
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended", "eslint:recommended", "next"],
   "rules": {
     "prettier/prettier": "error"
   }
