--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@playwright/test": "^1.45.1",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
