--- a/.github/workflows/backup/preview.yml
+++ b/.github/workflows/backup/preview.yml
@@ -1,10 +1,10 @@
-name: Deployment Production
+name: Deployment Preview
 
 on:
   workflow_dispatch:
 
 jobs:
-  Deploy-Production:
+  Deploy-Preview:
     runs-on: ubuntu-latest
     environment: PROD
     steps:
@@ -25,17 +25,20 @@ jobs:
       - name: Install Node.js Dependencies
         run: npm ci
 
-      - name: Run Tests
+      - name: Run Unit Tests
         run: npm test
+
+      - name: Run End To End Tests
+        run: npm test:e2e
 
       - name: Install Vercel CLI Globally
         run: npm install --global vercel
 
       - name: Sync Environment Config from Vercel
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project Using Vercel
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Prebuilt Project to Production
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
