--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm ci
 
       - name: Check for Formatting Errors
-        run: npm run fortmat
+        run: npm run format
 
       - name: Check for ESLint Errors
         run: npm run lint
