--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,13 +20,16 @@ jobs:
         run: npm ci
 
       - name: Check for Formatting Errors
-        run: npm run fortmat
+        run: npm run format
 
       - name: Check for ESLint Errors
         run: npm run lint
 
       - name: Check for Type Errors
         run: npm run typecheck
+
+      - name: Sync Environment Config from Vercel
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project using Vercel
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
