--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
       # How to set environment variables in Vercel?
 
       - name: Deploy Prebuilt Project
-        id: deploy-step
+        id: deploy
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
@@ -99,6 +99,6 @@ jobs:
           # echo "output:"
           # echo "$output"
 
-          echo "Deployed URL: $url"
+          # echo "Deployed URL: $url"
 
       # If possible get URL of deployed service and add as comment
