--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: ${{ inputs.github-env }}
-      url: 'http://${{ steps.deploy.outputs.aws_env_cname }}'
+      url: 'http://${{ steps.deploy.outputs.url }}'
     steps:
       - name: Avoid deploying to production using a non production env
         if: inputs.vercel-env == 'production' && inputs.github-env != 'production'
@@ -82,7 +82,7 @@ jobs:
       # How to set environment variables in Vercel?
 
       - name: Deploy Prebuilt Project
-        id: deploy
+        id: deploy-step
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
