--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,45 +1,26 @@
-name: Deploy Preview
+name: Vercel Preview Deployment
 
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-on:
-  workflow_dispatch:
+permissions:
+  contents: read
+  statuses: write
+  pull-requests: write
 
-# Avoids running this workflow multiple times for the same PR
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}-${{ inputs.vercel-env }}-${{ inputs.github-env }}
-  cancel-in-progress: true
+on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
 
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
-    environment:
-      # The URL where the deployment is accessible, will be shown in the Summary section of the deployment
-      url: ${{ steps.deploy.outputs.url }}
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node Environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: 'npm'
-
-      - name: Install dependencies
-        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        run: npm ci --ignore-scripts
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        id: cache-npm
-        with:
-          path: ~/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: npm-
+      - uses: actions/checkout@v2
 
       - name: Extract branch name
         shell: bash
@@ -53,17 +34,32 @@ jobs:
           input: ${{ steps.extract_branch.outputs.branch }}
           method: MD5
 
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
 
-      - name: Build Project using Vercel
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: cache-npm
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
+
+      - name: Install dependencies
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        run: npm ci --ignore-scripts
+
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
 
       - name: Deploy Project Artifacts to Vercel
         id: vercel
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
+          vercel --version
+          vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+          vercel build --token=$VERCEL_TOKEN
           vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
 
           vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} &> vercel-output
@@ -72,12 +68,9 @@ jobs:
           echo "META_TAG=$META_TAG"
           echo "VERCEL_URL=$url" >> "$GITHUB_OUTPUT"
 
-          echo "url=$url" >> $GITHUB_OUTPUT
-
-      # Currently commend is only added once and is not getting updated
       - uses: mshick/add-pr-comment@v2
         with:
           message: |
-            Your build has been deployed!
+            Your build has completed!
 
             [Preview deployment](${{ steps.vercel.outputs.VERCEL_URL }})
