--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -32,9 +32,6 @@ jobs:
           input: ${{ steps.extract_branch.outputs.branch }}
           method: MD5
 
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
       - name: Cache dependencies
         uses: actions/cache@v2
         id: cache-npm
@@ -48,7 +45,7 @@ jobs:
         run: npm ci --ignore-scripts
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
         id: vercel
