--- a/.github/workflows/_deploy-preview.yml
+++ b/.github/workflows/_deploy-preview.yml
@@ -1,28 +1,45 @@
-name: Vercel Preview Deployment
+name: Deploy Preview
 
 env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-permissions:
-  contents: read
-  statuses: write
-  pull-requests: write
-
 on:
   workflow_dispatch:
+
+# Avoids running this workflow multiple times for the same PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-${{ inputs.vercel-env }}-${{ inputs.github-env }}
+  cancel-in-progress: true
 
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
     environment:
-      name: ${{ inputs.github-env }}
       # The URL where the deployment is accessible, will be shown in the Summary section of the deployment
-      url: ${{ steps.deploy.outputs.VERCEL_URL }}
+      url: ${{ steps.deploy.outputs.url }}
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+
+      - name: Setup Node Environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'npm'
+
+      - name: Install dependencies
+        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        run: npm ci --ignore-scripts
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: cache-npm
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: npm-
 
       - name: Extract branch name
         shell: bash
@@ -36,28 +53,14 @@ jobs:
           input: ${{ steps.extract_branch.outputs.branch }}
           method: MD5
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        id: cache-npm
-        with:
-          path: ~/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: npm-
-
-      - name: Install dependencies
-        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        run: npm ci --ignore-scripts
-
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project using Vercel
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
-      # How to set environment variables in Vercel?
-
       - name: Deploy Project Artifacts to Vercel
-        id: deploy
+        id: vercel
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
@@ -69,9 +72,12 @@ jobs:
           echo "META_TAG=$META_TAG"
           echo "VERCEL_URL=$url" >> "$GITHUB_OUTPUT"
 
+          echo "url=$url" >> $GITHUB_OUTPUT
+
+      # Currently commend is only added once and is not getting updated
       - uses: mshick/add-pr-comment@v2
         with:
           message: |
-            Your build has completed!
+            Your build has been deployed!
 
             [Preview deployment](${{ steps.vercel.outputs.VERCEL_URL }})
