--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -16,10 +16,10 @@ on:
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
-    environment:
-      name: ${{ inputs.github-env }}
-      # The URL where the deployment is accessible, will be shown in the Summary section of the deployment
-      url: ${{ steps.deploy.outputs.url }}
+    # environment:
+    #   name: ${{ inputs.github-env }}
+    #   # The URL where the deployment is accessible, will be shown in the Summary section of the deployment
+    #   url: ${{ steps.deploy.outputs.url }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -59,7 +59,7 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         id: deploy
         env:
-          META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
+          META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt }}
         run: |
           vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
 
@@ -68,11 +68,14 @@ jobs:
           echo "New preview URL: $url"
           echo "META_TAG=$META_TAG"
 
-          echo "url=$url" >> "$GITHUB_OUTPUT"
+          echo "url=$url" >> $GITHUB_OUTPUT
+
+      - name: Post Deployment Summary
+        run: echo "Deployment URL: [${{ steps.deploy.outputs.url }}](${{ steps.deploy.outputs.url }})" >> $GITHUB_STEP_SUMMARY
 
       - uses: mshick/add-pr-comment@v2
         with:
           message: |
             Your build has completed!
 
-            [Preview deployment](${{ steps.vercel.outputs.url }})
+            [Preview deployment](${{ steps.deploy.outputs.url }})
