--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -37,13 +37,31 @@ jobs:
 
       # How to set environment variables in Vercel?
 
+      - name: Extract branch name
+        id: extract_branch
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
+      - name: Hash branch name
+        id: hash_branch
+        uses: pplanel/hash-calculator-action@v1.3.1
+        with:
+          input: ${{ steps.extract_branch.outputs.branch }}
+          method: MD5
+
       - name: Deploy Prebuilt Project
         id: deploy
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
-          url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
+          # TODO: check what --archive=tgz does in vercel deploy and if it should be used
+          url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}) --meta base_hash=${{ env.META_TAG }}
 
           echo "url=$url" >> $GITHUB_OUTPUT
 
-      # If possible get URL of deployed service and add as comment
+      - uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            Your deployment has completed!
+
+            [Preview deployment](${{ steps.deploy.outputs.url }})
