--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Sync Environment Config from Vercel
-        run: vercel pull --yes --environment=${{ ENVIRONMENT }} --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=${{ env.ENVIRONMENT }} --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project using Vercel
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
