--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -57,14 +57,16 @@ jobs:
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
+          vercel deploy --prebuilt --archive=tgz --token=${{ secrets.VERCEL_TOKEN }} --meta base_hash=${{ env.META_TAG }}
+
           # url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}) --meta base_hash=${{ env.META_TAG }}
-          url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
+          # url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
 
-          echo "url=$url" >> $GITHUB_OUTPUT
+          # echo "url=$url" >> $GITHUB_OUTPUT
 
-      - uses: mshick/add-pr-comment@v2
-        with:
-          message: |
-            Your deployment has completed!
+      # - uses: mshick/add-pr-comment@v2
+      #   with:
+      #     message: |
+      #       Your deployment has completed!
 
-            [Preview deployment](${{ steps.deploy.outputs.url }})
+      #       [Preview deployment](${{ steps.deploy.outputs.url }})
