--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,77 +1,72 @@
-name: Vercel Preview Deployment
-
-env:
-  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
-permissions:
-  contents: read
-  statuses: write
-  pull-requests: write
+name: Deploy Preview
 
 on:
   workflow_dispatch:
+
+# # Avoids running this workflow multiple times for the same PR
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.ref }}-${{ inputs.vercel-env }}-${{ inputs.github-env }}
+#   cancel-in-progress: true
+
+env:
+  ENVIRONMENT: preview
 
 jobs:
   deploy-preview:
     runs-on: ubuntu-latest
     environment:
-      name: ${{ inputs.github-env }}
+      # Name of the GitHub environment that contains environment variables
+      name: preview
       # The URL where the deployment is accessible, will be shown in the Summary section of the deployment
-      url: ${{ steps.deploy.outputs.VERCEL_URL }}
+      url: ${{ steps.deploy.outputs.url }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Extract branch name
-        shell: bash
-        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-        id: extract_branch
-
-      - name: Hash branch name
-        uses: pplanel/hash-calculator-action@v1.3.1
-        id: hash_branch
+      - name: Setup Node Environment
+        uses: actions/setup-node@v4
         with:
-          input: ${{ steps.extract_branch.outputs.branch }}
-          method: MD5
+          node-version: lts/*
+          cache: 'npm'
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        id: cache-npm
-        with:
-          path: ~/.npm
-          key: npm-${{ hashFiles('package-lock.json') }}
-          restore-keys: npm-
+      - name: Install Dependencies
+        run: npm ci
 
-      - name: Install dependencies
-        if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        run: npm ci --ignore-scripts
-
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Sync Environment Config from Vercel
+        run: vercel pull --yes --environment=${{ env.ENVIRONMENT }} --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project using Vercel
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       # How to set environment variables in Vercel?
 
-      - name: Deploy Project Artifacts to Vercel
+      - name: Extract branch name
+        id: extract_branch
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
+      - name: Hash branch name
+        id: hash_branch
+        uses: pplanel/hash-calculator-action@v1.3.1
+        with:
+          input: ${{ steps.extract_branch.outputs.branch }}
+          method: MD5
+
+      - name: Deploy Prebuilt Project
         id: deploy
         env:
           META_TAG: ${{ steps.hash_branch.outputs.digest }}-${{ github.run_number }}-${{ github.run_attempt}}
         run: |
-          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
+          vercel deploy --prebuilt --archive=tgz --token=${{ secrets.VERCEL_TOKEN }} --meta base_hash=${{ env.META_TAG }}
 
-          vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} &> vercel-output
-          url=$(cat vercel-output | grep http | awk '{print $2}')
-          echo "New preview URL: $url"
-          echo "META_TAG=$META_TAG"
-          echo "VERCEL_URL=$url" >> "$GITHUB_OUTPUT"
+          # url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}) --meta base_hash=${{ env.META_TAG }}
+          # url=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
 
-      - uses: mshick/add-pr-comment@v2
-        with:
-          message: |
-            Your build has completed!
+          # echo "url=$url" >> $GITHUB_OUTPUT
 
-            [Preview deployment](${{ steps.vercel.outputs.VERCEL_URL }})
+      # - uses: mshick/add-pr-comment@v2
+      #   with:
+      #     message: |
+      #       Your deployment has completed!
+
+      #       [Preview deployment](${{ steps.deploy.outputs.url }})
